# SIAM

./: Board.cpp  Board.h  CMakeLists.txt  Header.cpp  Header.h  Object.cpp  Object.h  Player sub_methods.cpp  Player sub_methods.h  Player.cpp  Player.h  README.md  global.h  main.cpp  utilities .h  utilities.cpp
